add home contents.

--- a/pages/home.html
+++ b/pages/home.html
@@ -7,6 +7,7 @@
     <title>ArikenCompany - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
     <link rel="stylesheet" href="../style/all.css">
+    <link rel="stylesheet" href="../style/home.css">
   </head>
   <body>
     <header>
@@ -16,9 +17,16 @@
         <a class="docs" href="./docs.html">Docs</a>
         <div class="github"><img style="width: 35px;" class="github-logo" src="../assets/githubLogo.png" alt="github"></div>
     </header>
-
+    <div class="main">
+      <div class="title">ArikenCompanyとは</div>
+      <div class="content">
+        <div class="detail">・<a href="https://twitch.tv/arikendebu">ありけんのTwitch</a>にて<a href="https://nightbot.tv/">NightBot</a>のようなものを実装している。</div>
+        <div class="detail">・有志が無償で運営しているものであり、依頼を受けて作成したものではない。</div>
+        <div class="detail">・このサイトやBotのソースコードは<a href="https://github.com/arikencompany">GitHub</a>で公開されています。</div>
+      </div>
+    </div>
     <footer>
-      <p class="copy-right">&copy; 2023 <a href="https://github.com/suzuki3jp">suzuki3jp</a></p>
+      <p class="copy-right">&copy; 2023 <a href="https://github.com/suzuki3jp">suzuki3jp</a> All Rights Reserved.</p>
     </footer>
     <script src="../script/all.js"></script>
   </body>
