add docs content.

--- a/pages/docs.html
+++ b/pages/docs.html
@@ -7,6 +7,7 @@
     <title>ArikenCompany - Docs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
     <link rel="stylesheet" href="../style/all.css">
+    <link rel="stylesheet" href="../style/docs.css">
   </head>
   <body>
     <header>
@@ -16,9 +17,19 @@
         <a class="docs" href="./docs.html">Docs</a>
         <div class="github"><img style="width: 35px;" class="github-logo" src="../assets/githubLogo.png" alt="github"></div>
     </header>
-
+    <div class="main">
+      <div class="title">Documents - ドキュメント</div>
+      <div class="content">
+        <ul class="list">
+            <li class="list-content"><a href="./docs/feature.html">機能一覧</a></li>
+            <li class="list-content"><a href="./commands.html">コマンド一覧</a></li>
+            <li class="list-content"><a href="./chatters.html">コメント数ランキング</a></li>
+            <li class="list-content"><a href="./docs/usageCommand.html">コマンドを利用する</a></li>
+        </ul>
+      </div>
+    </div>
     <footer>
-      <p class="copy-right">&copy; 2023 <a href="https://github.com/suzuki3jp">suzuki3jp</a></p>
+        <p class="copy-right">&copy; 2023 <a href="https://github.com/suzuki3jp">suzuki3jp</a> All Rights Reserved.</p>
     </footer>
     <script src="../script/all.js"></script>
   </body>
