add page list for smart phone user.

--- a/pages/home.html
+++ b/pages/home.html
@@ -23,6 +23,11 @@
         <div class="detail">・<a href="https://twitch.tv/arikendebu">ありけんのTwitch</a>にて<a href="https://nightbot.tv/">NightBot</a>のようなものを実装している。</div>
         <div class="detail">・有志が無償で運営しているものであり、依頼を受けて作成したものではない。</div>
         <div class="detail">・このサイトやBotのソースコードは<a href="https://github.com/arikencompany">GitHub</a>で公開されています。</div>
+        <div class="page-list">
+          <div class="detail">・<a href="./commands.html">コマンド一覧</a></div>
+          <div class="detail">・<a href="./chatters.html">チャット数ランキング</a></div>
+          <div class="detail">・<a href="./docs.html">ドキュメント</a></div>
+        </div>
       </div>
     </div>
     <footer>
