--- a/pages/commands.html
+++ b/pages/commands.html
@@ -7,6 +7,7 @@
     <title>ArikenCompany - Commands</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
     <link rel="stylesheet" href="../style/all.css">
+    <link rel="stylesheet" href="../style/commands.css">
   </head>
   <body>
     <header>
@@ -16,10 +17,13 @@
         <a class="docs" href="./docs.html">Docs</a>
         <div class="github"><img style="width: 35px;" class="github-logo" src="../assets/githubLogo.png" alt="github"></div>
     </header>
-
+    <div class="main">
+      <div class="title">コマンド一覧</div>
+    </div>
     <footer>
-      <p class="copy-right">&copy; 2023 <a href="https://github.com/suzuki3jp">suzuki3jp</a></p>
+        <p class="copy-right">&copy; 2023 <a href="https://github.com/suzuki3jp">suzuki3jp</a> All Rights Reserved.</p>
     </footer>
     <script src="../script/all.js"></script>
+    <script src="../script/commands.js"></script>
   </body>
 </html>
