add chatters content.

--- a/pages/chatters.html
+++ b/pages/chatters.html
@@ -7,6 +7,7 @@
     <title>ArikenCompany - Chatters</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes">
     <link rel="stylesheet" href="../style/all.css">
+    <link rel="stylesheet" href="../style/chatters.css">
   </head>
   <body>
     <header>
@@ -16,6 +17,10 @@
         <a class="docs" href="./docs.html">Docs</a>
         <div class="github"><img style="width: 35px;" class="github-logo" src="../assets/githubLogo.png" alt="github"></div>
     </header>
+    <div class="main">
+      <div class="title">コメント数ランキング</div>
+    </div>
     <script src="../script/all.js"></script>
+    <script src="../script/chatters.js"></script>
   </body>
 </html>
