update: 所有権確認のためのmetaタグ追加

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="0;URL=./pages/home.html">
+    <meta name="google-site-verification" content="yckw677snTmXVQaA06yijrXeyWZ2OmMD7vo70zn5FlQ" />
     <title>転送中</title>
 </head>
 <body>
